--- a/index.html
+++ b/index.html
@@ -108,6 +108,60 @@ x<sup>*</sup>x=x<sup>2</sup></b>
 <LI> GTX 1070
 </UL>
  </font>
+
+<font color="blue">
+
+ <h1> poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
+<h1> Ty zaproponuj swoje, związane z informatyką</h1>
+<h3> Urządzenia do komputera</h3>
+<UL TYPE=circle>
+ <LI> klawiatura
+<LI> myszka
+ <LI> słuchawki
+<LI> kontrolery
+ </UL>
+ <h3> Rzeczy na płycie głównej</h3>
+ <UL TYPE=disc>
+ <LI> karta graficzna
+<LI> dysk HDD
+ <LI> dysk SSD
+<LI> Procesor
+ </UL> 
+ <h3> Typy USB</h3>
+  <UL TYPE=square>
+ <LI> A
+<LI> B
+ <LI> C
+<LI> micro USB
+</UL>
+ </font>
+
+<font color="purple">
+
+ <h1> poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
+<h1> Ty zaproponuj swoje, związane z informatyką</h1>
+<h3> Opcje w panelu sterowania </h3>
+<UL TYPE=circle>
+ <LI> system i zabezpieczenia
+<LI> sieć i internet
+ <LI> sprzęt i dźwięk
+<LI> Programy
+ </UL>
+ <h3> Antywirusy </h3>
+ <UL TYPE=disc>
+ <LI> TOTALAV
+<LI> Norton
+ <LI> Bitdefender
+<LI> PCPROTECT
+ </UL> 
+ <h3> Rozszerzenia plików </h3>
+  <UL TYPE=square>
+ <LI> .html
+<LI> .txt
+ <LI> .exe
+<LI> .png
+</UL>
+ </font>
 <a href="#skok_wroć">kliknij aby skoczyć na początek tekstu</a><br>
 <a name="skok_koniec"></a>
 
