--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ x<sup>*</sup>x=x<sup>2</sup></b>
  </font>
 <a href="#skok_wroć">kliknij aby skoczyć na początek tekstu</a><br>
 <a name="skok_koniec"></a>
+   <br><br>
+   zadanie 11
 
 
 
