--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <A HREF="poczta_Kowalski.html"> Tutaj jest link do poczty </A><br>
 <A HREF="plik_Kowalski.html"> Tutaj jest link do pliku </A><br>
 <A HREF="tabela_Kowalski.html"> Tutaj jest link do tabeli </A><br>
-<A HREF="formularz_Kowalski.html"> Tutaj jest link do formularza </A>
+<A HREF="formularz.html"> Tutaj jest link do formularza </A>
 
 <p align="right"> <font color="blue" size="7" face="Arial"> Olivier </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Olivier </font> </p> <br>
