--- a/formularz.html
+++ b/formularz.html
@@ -57,9 +57,10 @@
         <input type="text"><br>
         <label for="numer">Podaj adres email:</label><br>
         <input type="text"><br>
-                          <br>
-                          <br>
-                          <br>
+                         
+                         <p align="center">
+        <input type="submit">
+                            <br><br><br>
 <A HREF="index.html"> powrot</A><br>
     </p>
     </form>
